# place_recognition

./: .gitignore  CMakeLists.txt  README.md  feature_extract.py  preprocess.py  viewer.py
include/: bev_debugger.hpp  lidar_simulator.hpp  sc_module.hpp
scripts/: DATASET  generate_global_map.py  graph2odometry.py  graph2odometry_dense.py  hba_global_map.py  hba_visualize.py  keyframe_picker.py  kf2hba.py  pcd2pgm.py  pcd2pgm_grid.py  png2pgm.py  preprocess_deprecated.py  process_bag.py  process_bag_hba.py
solid/: solid_module.hpp
src/: feature_selector.cpp  grid_feature_extractor.cpp  keyframe_simulator.cpp  match.cpp  match_test.cpp  simulator_test.cpp
